# pyDO3SE-private-release

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  SUB_VERSIONS.txt  VERSION.txt  clone_and_pull.sh  env.init.sh  pyDO3SE_apptainer.def  pyDO3SE_grid_apptainer.def  pyproject.toml  setup.cfg  setup.py  tests
src/do3se_phenology/: .bumpversion.cfg  README.md  pyproject.toml  setup.py
src/do3se_phenology/.circleci/: config.yml
src/do3se_phenology/do3se_phenology/: __init__.py  canopy_structure.py  carbon_allocation.py  cli.py  config.py  data_access.py  defaults.py  f_phen.py  geo.py  latitude_function.py  phenology_stages.py  phenology_variables.csv  phyllochron_dvi.py  plots.py  state.py  switchboard.py  units.py  utils.py  version.py
src/do3se_phenology/do3se_phenology/presets/: forest.py  wheat.py
src/do3se_phenology/docs/: .gitignore  DO3SE phenology parameterisation.xlsx  Makefile  conf.py  index.rst  requirements.txt
src/do3se_phenology/docs/common/: using_docx_files.rst
src/do3se_phenology/docs/end_user/: index.rst
src/do3se_phenology/docs/reports/: index.rst
src/do3se_phenology/docs/source/: do3se_phenology.canopy_structure.rst  do3se_phenology.cli.rst  do3se_phenology.main.rst  do3se_phenology.phyllochron_dvi.rst  do3se_phenology.plots.rst  do3se_phenology.rst  do3se_phenology.utils.rst  modules.rst
src/do3se_phenology/examples/: SE_1987_NF+.csv  processed_config.json
src/do3se_phenology/examples/vernalisation/: vernalisation_china_xiaoji2008_data.csv  vernalisation_china_xiaoji2008_data_b.csv
src/do3se_phenology/notebooks/: _template.ipynb  collab_helper.py  demo.ipynb  ewert_f_phen.ipynb  f_phen.ipynb  geo.ipynb  leaf_populations.ipynb  phyllochron_dvi.ipynb  td_percentage_definition.ipynb  td_percentage_definition_plot_only.py  using_current_dvi.ipynb  winter_vernalization.ipynb
src/do3se_phenology/notebooks/lat_function/: lat_function.py
src/do3se_phenology/requirements/: common.txt  development.txt  docs.txt  freeze.txt  list.txt
src/do3se_phenology/scripts/: release.sh
src/do3se_phenology/tests/: geo_test.py  td_percent_definition_test.py  test_canopy_structure.py  test_f_phen.py  test_latitude_function.py  test_phenology_stages.py  test_phyllochron_dvi.py  test_plots.py  test_switchboard.py  test_utils.py  test_vernalisation.py
src/pyDO3SE/: .bumpversion.cfg  README.md  VERSION.txt  conftest.py  pyDO3SE_cli.py  pyDO3SE_gui.py  pyproject.toml  setup.cfg  setup.py
src/pyDO3SE/.benchmarks/Linux-CPython-3.8-64bit/: 0001_66e255575d50b593b10c1c1c00cd76f764905492_20210419_140707_uncommited-changes.json  0003_6c13b9567b9abd3a221103844a1a809de7525e0f_20210419_141956.json  0004_6c13b9567b9abd3a221103844a1a809de7525e0f_20210419_144422_uncommited-changes.json  0006_6c13b9567b9abd3a221103844a1a809de7525e0f_20210419_145730_uncommited-changes.json
src/pyDO3SE/.circleci/: config.yml
src/pyDO3SE/docs/: .gitignore  Makefile  conf.py  index.rst  pandoc_link_filter.py
src/pyDO3SE/docs/academic/: Appendix.rst  Appendix_mod.htm  Background.docx  Background.mht  Background.rst  Background_mod.htm  References.rst  Template.rst  Template_mod.htm  index.rst
src/pyDO3SE/docs/developer_contribution/: functional_approach_to_state_models.rst  model_data.rst
src/pyDO3SE/docs/end_user/: DO3SE default_veg_presets_revised_2017.xlsx
src/pyDO3SE/docs/experiment/: am.rst  demo_full.htm  demo_full.rst  demo_link_rawword.htm  demo_link_rawword_b.rst  demo_link_rawword_mod.htm  demo_link_rawword_mod.rst  demo_rawword.htm  demo_rawword.rst  demo_rawword_mod.htm  demo_rawword_mod.rst  demo_rawword_mod_mod.htm
src/pyDO3SE/docs/general/: introduction.rst  legacy.rst
src/pyDO3SE/docs/source/: modules.rst  pyDO3SE.Analysis.rst  pyDO3SE.Config.Config_Shape.rst  pyDO3SE.Config.config_loader.rst  pyDO3SE.Config.rst  pyDO3SE.External_State.External_State_Shape.rst  pyDO3SE.External_State.demo_data.rst  pyDO3SE.External_State.rst  pyDO3SE.Model_State.Model_State.rst  pyDO3SE.Model_State.rst  pyDO3SE.Output.Output_Shape.rst  pyDO3SE.Output.rst  pyDO3SE.Pipelines.config_init_processes.rst  pyDO3SE.Pipelines.default_processes.rst  pyDO3SE.Pipelines.do3se_ui_processes.rst  pyDO3SE.Pipelines.state_init_processes.rst  pyDO3SE.Pipelines.validation_processes.rst  pyDO3SE.constants.model_constants.rst  pyDO3SE.constants.rst  pyDO3SE.main.rst  pyDO3SE.plugins.gsto.constants.rst  pyDO3SE.plugins.gsto.ewert.ewert.rst  pyDO3SE.plugins.gsto.ewert.ewert_helpers.rst  pyDO3SE.plugins.gsto.ewert.fewert.rst  pyDO3SE.plugins.gsto.ewert.rst  pyDO3SE.plugins.gsto.martin2000.rst  pyDO3SE.plugins.gsto.multiplicative.rst  pyDO3SE.plugins.gsto.photosynthesis_helpers.rst  pyDO3SE.plugins.gsto.rst  pyDO3SE.plugins.met.conversion.rst  pyDO3SE.plugins.met.helpers.rst  pyDO3SE.plugins.met.irradiance.rst  pyDO3SE.plugins.met.rst  pyDO3SE.plugins.met.solar_position.rst  pyDO3SE.plugins.met.wind.rst  pyDO3SE.plugins.phenology.f_phen.rst  (+17 more)
src/pyDO3SE/notebook_templates/: README.md  run_model.ipynb
src/pyDO3SE/notebooks/: README.md  compare_single_and_multi_layer.py  fst_output_analysis.py  fst_output_analysis_o3concent.py
src/pyDO3SE/pyDO3SE/: __main__.py  lib.py  main.py  main_test.py  optional_dependencies.py  run_model.py  run_model_test.py  settings.py  setup_model.py  setup_model_test.py  version.py
src/pyDO3SE/pyDO3SE_gui/: README.md  requirements.txt
src/pyDO3SE/requirements/: common.txt  development.txt  docs.txt  freeze.txt  list.txt  private.txt  test.txt
src/pyDO3SE/scripts/: migrate_example_configs.py  pull_data_from_agmip_template.py  release.sh
src/pyDO3SE/tests/: test_flag_only_runs.py  test_helpers.py  test_hourly_grid_run.py  test_init_external_state.py  test_partial_run.py  test_process.py  test_process_full_year.py  test_pyDO3SE_main.py  test_run_legacy.py  test_run_output_comparisons.py  test_sense_check.py  test_short_profile_tests.py  utils.py
src/thermal_time/: .bumpversion.cfg  README.md  pyproject.toml  setup.cfg  setup.py
src/thermal_time/scripts/: release.sh
src/thermal_time/thermal_time/: __init__.py  calcs.py
(+1994 files in other folders)
