[project]
name = "pyDO3SE-open"
version = "4.40.6"
description = "Full wrapper to the DO3SE tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.18.3",
  "matplotlib>=3.2.1",
  "pandas>=1.0.3",
  "scipy>=1.5.2",
  "click>=7.1.2",
  "deprecated>=1.2.12",
  "wheel>=0.36.2",
  "proFlow>=0.3.9",
  "data-helpers>=0.1.29",
  "dill>=0.3.8",
]
[tool.uv.workspace]
members = [
  "src/pyDO3SE",
  "src/thermal_time",
  "src/do3se_phenology",
  "src/do3se_met",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/pyDO3SE/pyDO3SE",
  "src/thermal_time/thermal_time",
  "src/do3se_phenology/do3se_phenology",
  "src/do3se_met/do3se_met",
]
