[project]
name = "do3se_phenology"
version = "4.40.6"
description = "DO3SE phenology module"
readme = "README.md"
authors = [{ "email" = "sam.bland@york.ac.uk", "name" = "Sam Bland" }]
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.18.3",
  "matplotlib>=3.2.1",
  "pandas>=1.0.3",
  "scipy>=1.5.2",
  "click>=7.1.2",
  "deprecated>=1.2.12",
  "data-helpers_v2>=0.1.29",
  # Additional private dependencies
  # Install these manually with uv pip install -e ../do3se_met etc after uv sync
  # 'thermal_time@git+ssh://git@github.com/SEI-DO3SE/thermal_time@RELEASE',
  # 'do3se_met@git+ssh://git@github.com/SEI-DO3SE/do3se_met@RELEASE',
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-snapshot>=0.9.0",
  "ruff>=0.7.0",
  "pre-commit>=2.7.1",
  "bump2version>=1.0.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"_test.py" = ["D100", "D101", "D102", "D103", "D107"]
"test_*.py" = ["D100", "D101", "D102", "D103", "D107"]

