[project]
name = "pyDO3SE"
version = "4.44.5"
description = "DO3SE model python API"
authors = [{ "email" = "sam.bland@york.ac.uk", "name" = "Sam Bland" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pre-commit",
  "numpy>=1.18.3",
  "matplotlib>=3.2.1",
  "pandas>=1.0.3",
  "scipy>=1.5.2",
  "click>=7.1.2",
  "deprecated>=1.2.12",
  "wheel>=0.36.2",
  "proflow>=0.3.9",
  "data-helpers_v2>=0.1.29",
  "dill>=0.3.8",
  # Additional private dependencies
  # Install these manually with uv pip install -e ../do3se_met etc after uv sync
  # 'thermal_time@git+ssh://git@github.com/SEI-DO3SE/thermal_time@RELEASE',
  # 'do3se_phenology@git+ssh://git@github.com/SEI-DO3SE/do3se_phenology@RELEASE',
  # 'do3se_met@git+ssh://git@github.com/SEI-DO3SE/do3se_met@RELEASE',
]
[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-snapshot>=0.9.0",
  "ruff>=0.7.0",
  "pre-commit>=2.7.1",
  "bump2version>=1.0.1",
  "pytest-benchmark>=3.4.1",
  "decorator>=5.0.0",
]

doc = [
  "sphinx",
  "pypandoc",
  "rst2pdf",
  "pandocfilters",
  "sphinx-rtd-theme",
  "sphinx-click",
]

grid = ["netCDF4", "xarray", "dask"]

interactive = ["ipython", "jupyter", "jupyterlab", "ipywidgets", "ipycanvas"]

test = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-benchmark>=3.4.1",
  "pytest-snapshot>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"_test.py" = ["D100", "D101", "D102", "D103", "D107"]
"test_*.py" = ["D100", "D101", "D102", "D103", "D107"]

# [tool.uv.sources]
# do3se-met = { path = "../do3se_met", editable = true }
# thermal-time = { path = "../thermal_time", editable = true }
