[flake8]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,*/snap_*,*/snapshots/*,notebooks/*
ignore = E741
per-file-ignores = *_test.py:D100,D101,D102,D103,D107

[pycodestyle]
max-line-length = 100
exclude=.tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[aliases]
test=pytest --addopts '--cov=pyDO3SE --cov-report term-missing:skip-covered -v'
testv=pytest --addopts '--cov=pyDO3SE --cov-report term-missing:skip-covered -vvv'
testu=pytest --addopts '--cov=pyDO3SE --cov-report term-missing:skip-covered -v --snapshot-update'
testfull=pytest --addopts '--benchmark-autosave --snapshot-update'

[coverage:run]
branch=True

[metadata]
name = pyDO3SE4
version = 4.40.7
author = Sam Bland(SEIYork)
author_email = sam.bland@york.ac.uk
description = DO3SE model python API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SEI-DO3SE/pyDO3SE
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
package_dir =
  pyDO3SE  = pyDO3SE
  pyDO3SE_cli  = pyDO3SE_cli
packages = find:
python_requires = >=3.8
install_requires =
    scipy
    numpy
    click
    pandas
    matplotlib
    deprecated
    proflow
    data-helpers
    thermal_time @ git+ssh://git@github.com/SEI-DO3SE/thermal_time@RELEASE
    do3se_phenology @ git+ssh://git@github.com/SEI-DO3SE/do3se_phenology@RELEASE
    do3se_met @ git+ssh://git@github.com/SEI-DO3SE/do3se_met@RELEASE

setup_requires =
    pytest-cov
    pytest-runner
    snapshottest
tests_require=
    pytest
    numpy
    pandas
    matplotlib
    pytest-benchmark

# extras_require=
#     test =
#         pytest
#         numpy
#         pandas

[options.packages.find]
where = .

