[project]
name = "thermal_time"
version = "0.0.18"
description = "DO3SE thermal time model"
readme = "README.md"
authors = [{ "email" = "sam.bland@york.ac.uk", "name" = "Sam Bland" }]
requires-python = ">=3.12"
dependencies = ["numpy>=1.18.3", "pandas>=1.0.3", "deprecated>=1.2.12"]


[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-snapshot>=0.9.0",
  "ruff>=0.7.0",
  "pre-commit>=2.7.1",
  "bump2version>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"_test.py" = ["D100", "D101", "D102", "D103", "D107"]
"test_*.py" = ["D100", "D101", "D102", "D103", "D107"]
